Use GraalVM